Created prototypes in header files, divided work according to prototypes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,16 @@ project(Emulator C)
 set(CMAKE_C_STANDARD 99)
 
 add_library(Emulator STATIC
-        src/registers.h
-        src/loader.c
-        src/registers.c
-        src/instructions/dataprocessing.c
-        src/instructions/dataprocessing.h
-        src/instructions/shifter.c
-        src/instructions/shifter.h
-        src/instructions/datatransfer.c
-        src/instructions/datatransfer.h
-        src/instructions/branch.c
-        src/instructions/branch.h
-        src/instructions/special.c
-        src/instructions/special.h
+        src/memory.h
+        src/memory.c
+        src/dataprocessing.c
+        src/dataprocessing.h
+        src/shifter.c
+        src/shifter.h
+        src/datatransfer.c
+        src/datatransfer.h
+        src/branch.c
+        src/branch.h
+        src/special.c
+        src/special.h
 )
