Added inputFile and outputFile stuff for part 1. Added some basic functions/ideas to emulate.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ add_library(Emulator STATIC
         src/branch.h
         src/special.c
         src/special.h
+		src/assemble/assemble.c
+		src/emulate.c
 )
