Finish the rest of the cases. Implemented all paths in assembler. Sahil helped make modify_instruction(). Still needs refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,4 +33,8 @@ add_library(Emulator STATIC
 		src/assemble/loadstore.h
 		src/assemble/data_processing_assembly.c
 		src/assemble/data_processing_assembly.h
+		src/assemble/parsing_common.c
+		src/assemble/parsing_common.h
+		src/assemble/aliases.c
+		src/assemble/aliases.h
 )
