--- a/src/emulate/Makefile
+++ b/src/emulate/Makefile
@@ -7,7 +7,7 @@ CFLAGS  ?= -std=c17 -g\
 
 .PHONY: all clean
 
-all: assemble emulate
+all: ../assemble emulate
 
 assemble: assemble.o
 emulate: emulate.o
