Fixed any tiny merging errors. Cleaned up improper format strings and various other cleanups using cppcheck and -Wextra

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,5 @@ add_library(Emulator STATIC
 		src/assemble/data_processing_assembly.h
 		src/assemble/parsing_common.c
 		src/assemble/parsing_common.h
+		src/emulate/bitmanipulation.c
 )
