Add support for 7-bag randomiser

--- a/src/Tetris/src/CMakeLists.txt
+++ b/src/Tetris/src/CMakeLists.txt
@@ -17,6 +17,8 @@ add_library(tetris STATIC
 		tetriminoes.c
 		tetriminoes.h
 		game.c
-		network.c)
+		network.c
+		random_piece.c
+		random_piece.h)
 
 target_link_libraries(tetris raylib)
