--- a/src/assemble/CMakeLists.txt
+++ b/src/assemble/CMakeLists.txt
@@ -5,4 +5,5 @@ project(FinalProjectY1_Assembler C)
 file(GLOB SOURCE_FILES *.c)
 file(GLOB HEADER_FILES *.h)
 
-add_executable(assemble ${SOURCE_FILES} ${HEADER_FILES})
+add_executable(assemble ${SOURCE_FILES} ${HEADER_FILES}
+		../debug.h)
