--- a/extension/CMakeLists.txt
+++ b/extension/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_C_STANDARD 99)
-project(FinalProjectY1_Tetris)
+project(FinalProjectY1_Tetris C)
 
 # Generate compile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
